--- a/www/css/index.css
+++ b/www/css/index.css
@@ -16,6 +16,12 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+ 
+@viewport{height:device-height}
+@viewport{width:device-width}
+@-ms-viewport{height:device-height}
+@-ms-viewport{width:device-width}
+
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
@@ -44,6 +50,14 @@ body {
         background-color: white;
         height:100%;
         width:100%;
+}
+
+    IMG.picture {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    max-height: 100%;
 }
 }
 
